# scriptik

./: .gitignore  LICENSE  Makefile  README.md  dashboard.py  install.sh  record-toggle  scriptik-cli  uninstall.sh
.github/workflows/: release.yml  windows-build.yml
RecordToggle/: Package.resolved  Package.swift
RecordToggle/Sources/RecordToggle/: AppState.swift  RecordToggleApp.swift
RecordToggle/scripts/: bundle.sh  generate-icon.swift
Scriptik/: Package.swift
Scriptik.Windows/: App.xaml  App.xaml.cs  Scriptik.Windows.csproj
Scriptik.Windows/Converters/: BoolToVisibilityConverter.cs
Scriptik.Windows/Core/: AppState.cs
Scriptik.Windows/Python/: transcribe.py  transcribe_server.py
Scriptik.Windows/Resources/: Theme.xaml
Scriptik.Windows/Scripts/: build.ps1  setup.ps1
Scriptik.Windows/Services/: AudioRecorderService.cs  AutoPasteService.cs  ClipboardService.cs  ConfigManager.cs  FfmpegHelper.cs  GlobalHotkeyService.cs  HistoryManager.cs  LaunchAtLoginService.cs  SoundService.cs  TranscriberService.cs  TranscriptionServerService.cs
Scriptik.Windows/UI/FloatingCircle/: FloatingCircleWindow.xaml  FloatingCircleWindow.xaml.cs
Scriptik/scripts/: bundle.sh  generate-icon.swift
scriptik-windows/: README.md  package.json
scriptik-windows/scripts/: setup.ps1
scriptik-windows/src/: index.html  main.js  style.css
scriptik-windows/src-tauri/: Cargo.toml  tauri.conf.json
scriptik-windows/src-tauri/python/: transcribe_server.py
scriptik-windows/src-tauri/src/: audio.rs  config.rs  lib.rs  main.rs  transcriber.rs
(+36 files in other folders)
