[package]
name = "scriptik-windows"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
hound = "3.5"
arboard = "3"
global-hotkey = "0.6"
dirs = "6"
tokio = { version = "1", features = ["process", "io-util", "sync", "time", "rt", "macros"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[[bin]]
name = "scriptik-windows"
path = "src/main.rs"
